Text_Analysis/gerapy/projects/weibo/logs/weibo/weibofilm/332152e25ad311eaaf64c85b7695f72d.log
2020-02-29 17:09:42 [scrapy.utils.log] INFO: Scrapy 1.8.0 started (bot: weibo)
2020-02-29 17:09:42 [scrapy.utils.log] INFO: Versions: lxml 4.4.2.0, libxml2 2.9.5, cssselect 1.1.0, parsel 1.5.2, w3lib 1.21.0, Twisted 18.7.0, Python 3.7.6 (tags/v3.7.6:43364a7ae0, Dec 19 2019, 00:42:30) [MSC v.1916 64 bit (AMD64)], pyOpenSSL 19.1.0 (OpenSSL 1.1.1d  10 Sep 2019), cryptography 2.8, Platform Windows-10-10.0.17134-SP0
2020-02-29 17:09:42 [scrapy.crawler] INFO: Overridden settings: {'BOT_NAME': 'weibo', 'LOG_FILE': 'logs\\weibo\\weibofilm\\332152e25ad311eaaf64c85b7695f72d.log', 'NEWSPIDER_MODULE': 'weibo.spiders', 'SPIDER_MODULES': ['weibo.spiders']}
2020-02-29 17:09:42 [scrapy.middleware] WARNING: Disabled TelnetConsole: TELNETCONSOLE_ENABLED setting is True but required twisted modules failed to import:
Traceback (most recent call last):
  File "e:\software\python3.7.6\lib\site-packages\scrapy\extensions\telnet.py", line 15, in <module>
    from twisted.conch import manhole, telnet
  File "e:\software\python3.7.6\lib\site-packages\twisted\conch\manhole.py", line 154
    def write(self, data, async=False):
                              ^
SyntaxError: invalid syntax

2020-02-29 17:09:42 [scrapy.middleware] INFO: Enabled extensions:
['scrapy.extensions.corestats.CoreStats', 'scrapy.extensions.logstats.LogStats']
2020-02-29 17:09:45 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:51889/session {"capabilities": {"firstMatch": [{}], "alwaysMatch": {"browserName": "chrome", "platformName": "any", "goog:chromeOptions": {"extensions": [], "args": []}}}, "desiredCapabilities": {"browserName": "chrome", "version": "", "platform": "ANY", "goog:chromeOptions": {"extensions": [], "args": []}}}
2020-02-29 17:09:45 [urllib3.connectionpool] DEBUG: Starting new HTTP connection (1): 127.0.0.1:51889
2020-02-29 17:09:47 [urllib3.connectionpool] DEBUG: http://127.0.0.1:51889 "POST /session HTTP/1.1" 200 828
2020-02-29 17:09:47 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-02-29 17:09:47 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:51889/session/ba8c7059d390d70af10b022d7244c43a/url {"url": "https://m.weibo.cn/quicklogin?r=https%3A%2F%2Fm.weibo.cn%2Fdetail%2F4375850843355381", "sessionId": "ba8c7059d390d70af10b022d7244c43a"}
2020-02-29 17:10:09 [urllib3.connectionpool] DEBUG: http://127.0.0.1:51889 "POST /session/ba8c7059d390d70af10b022d7244c43a/url HTTP/1.1" 200 72
2020-02-29 17:10:09 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-02-29 17:10:11 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:51889/session/ba8c7059d390d70af10b022d7244c43a/element {"using": "xpath", "value": ".//li[@class = 'l-uitem']/a", "sessionId": "ba8c7059d390d70af10b022d7244c43a"}
2020-02-29 17:10:11 [urllib3.connectionpool] DEBUG: http://127.0.0.1:51889 "POST /session/ba8c7059d390d70af10b022d7244c43a/element HTTP/1.1" 200 356
2020-02-29 17:10:11 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-02-29 17:10:11 [twisted] CRITICAL: Unhandled error in Deferred:
2020-02-29 17:10:11 [twisted] CRITICAL: 
Traceback (most recent call last):
  File "e:\software\python3.7.6\lib\site-packages\twisted\internet\defer.py", line 1418, in _inlineCallbacks
    result = g.send(result)
  File "e:\software\python3.7.6\lib\site-packages\scrapy\crawler.py", line 85, in crawl
    self.spider = self._create_spider(*args, **kwargs)
  File "e:\software\python3.7.6\lib\site-packages\scrapy\crawler.py", line 108, in _create_spider
    return self.spidercls.from_crawler(self, *args, **kwargs)
  File "e:\software\python3.7.6\lib\site-packages\scrapy\spiders\__init__.py", line 50, in from_crawler
    spider = cls(*args, **kwargs)
  File "F:\GitHubCode\Code\Python\Django\Text_Analysis\gerapy\projects\weibo\weibo\spiders\weibofilm.py", line 62, in __init__
    ac = self.web.find_element_by_xpath(".//li[@class = 'l-uitem']/a")
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 394, in find_element_by_xpath
    return self.find_element(by=By.XPATH, value=xpath)
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 978, in find_element
    'value': value})['value']
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
    self.error_handler.check_response(response)
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
    raise exception_class(message, screen, stacktrace)
selenium.common.exceptions.NoSuchElementException: Message: no such element: Unable to locate element: {"method":"xpath","selector":".//li[@class = 'l-uitem']/a"}
  (Session info: chrome=72.0.3626.121)
  (Driver info: chromedriver=2.38.552522 (437e6fbedfa8762dec75e2c5b3ddb86763dc9dcb),platform=Windows NT 10.0.17134 x86_64)

